--- a/translations/messages.ru.xlf
+++ b/translations/messages.ru.xlf
@@ -8,7 +8,7 @@
             </trans-unit>
             <trans-unit id="2">
                 <source>Unanswered</source>
-                <target>Пока без ответов</target>
+                <target>Без ответов</target>
             </trans-unit>
             <trans-unit id="3">
                 <source>Tags</source>
@@ -213,6 +213,158 @@
             <trans-unit id="53">
                 <source>Edited</source>
                 <target>Редактированно</target>
+            </trans-unit>
+            <trans-unit id="54">
+                <source>Please enter between {min_tags} and {max_tags} tags, separated by spaces</source>
+                <target>Укажите от {min_tags} до {max_tags} тагов к этому вопросу</target>
+            </trans-unit>
+            <trans-unit id="55">
+                <source>Preview</source>
+                <target>Просмотр</target>
+            </trans-unit>
+            <trans-unit id="56">
+                <source>Enter a descriptive title</source>
+                <target>Напишите заголовок для этого вопроса</target>
+            </trans-unit>
+            <trans-unit id="57">
+                <source>Title</source>
+                <target>Заголовок</target>
+            </trans-unit>
+            <trans-unit id="58">
+                <source>Submit Question</source>
+                <target>Отправить вопрос</target>
+            </trans-unit>
+            <trans-unit id="59">
+                <source>Ask a question</source>
+                <target>Задать вопрос</target>
+            </trans-unit>
+            <trans-unit id="60">
+                <source>Edit Profile</source>
+                <target>Изменить личные данные</target>
+            </trans-unit>
+            <trans-unit id="61">
+                <source>Change Password</source>
+                <target>Изменить пароль</target>
+            </trans-unit>
+             <trans-unit id="62">
+                <source>Email Preferences</source>
+                <target>Настройки уведомлений</target>
+            </trans-unit>
+            <trans-unit id="63">
+                <source>Your Email Subscription Preferences</source>
+                <target>Выберите, когда получать сообщения на адрес электронной почты</target>
+            </trans-unit>
+            <trans-unit id="64">
+                <source>Password updated successfully</source>
+                <target>Пароль изменён</target>
+            </trans-unit>
+            <trans-unit id="65">
+                <source>Save</source>
+                <target>Сохранить</target>
+            </trans-unit>
+            <trans-unit id="66">
+                <source>Current Password</source>
+                <target>Текущий пароль</target>
+            </trans-unit>
+            <trans-unit id="67">
+                <source>Enter new password</source>
+                <target>Новый пароль</target>
+            </trans-unit>
+            <trans-unit id="68">
+                <source>Confirm new password</source>
+                <target>Повторите пароль</target>
+            </trans-unit>
+            <trans-unit id="69">
+                <source>Enter your current password</source>
+                <target>Введите ваш действующий пароль</target>
+            </trans-unit>
+            <trans-unit id="70">
+                <source>This is not the correct password</source>
+                <target>Ваш старый пароль неверен</target>
+            </trans-unit>
+            <trans-unit id="71">
+                <source>Password must be at least 6 characters long and contain at least one number</source>
+                <target>Пароль не должен быть короче 6 символов и содержать по меньшей мере одну букву или цифру</target>
+            </trans-unit>
+            <trans-unit id="72">
+                <source>"New password" and "Confirm new password" do not match</source>
+                <target>Ваше новое подтверждение пароля не соответствует вашему новому паролю. Возможно, вы допустили ошибку при наборе. Пожалуйста, наберите и подтверждите свой новый пароль ещё раз</target>
+            </trans-unit>
+             <trans-unit id="73">
+                <source>Newest</source>
+                <target>Последнии</target>
+            </trans-unit>
+             <trans-unit id="74">
+                <source>Most Voted</source>
+                <target>Популярные</target>
+            </trans-unit>
+             <trans-unit id="75">
+                <source>Most Active</source>
+                <target>Обсуждаемые</target>
+            </trans-unit>
+             <trans-unit id="76">
+                <source>Most recent questions</source>
+                <target>Недавно добавленные</target>
+            </trans-unit>
+             <trans-unit id="77">
+                <source>Questions with most votes</source>
+                <target>С наибольшим количеством оценок</target>
+            </trans-unit>
+             <trans-unit id="78">
+                <source>Questions with most activity</source>
+                <target>Наиболее обсуждаемые</target>
+            </trans-unit>
+            <trans-unit id="79">
+                <source>Questions with highest votes in past 7 days</source>
+                <target>Наибольшее количесвто оценок за последние 7 дней</target>
+            </trans-unit>
+            <trans-unit id="80">
+                <source>Active Questions</source>
+                <target>Наиболее обсуждаемые</target>
+            </trans-unit>
+            <trans-unit id="81">
+                <source>You have contributed to this question</source>
+                <target>Вы автор вопроса или вы комментировали или отвечали на этот вопрос.</target>
+            </trans-unit>
+            <trans-unit id="82">
+                <source>Tags you follow</source>
+                <target>Таги на которые вы подписанны</target>
+            </trans-unit>
+            <trans-unit id="83">
+                <source>You are following this question</source>
+                <target>Вы поднисанны на этот вопрос</target>
+            </trans-unit>
+             <trans-unit id="85">
+                <source>Number of Questions</source>
+                <target>Количество вопросов</target>
+            </trans-unit>
+            <trans-unit id="86">
+                <source>Toggle Unread/Read Status</source>
+                <target>Изменить статус сообщения прочитаное/новое</target>
+            </trans-unit>
+            <trans-unit id="87">
+                <source>Asked</source>
+                <target>Вопрос задан</target>
+            </trans-unit>
+            <trans-unit id="88">
+                <source>Latest answer by</source>
+                <target>Последний ответ от</target>
+            </trans-unit>
+            <trans-unit id="89">
+                <source>Cache Cleared</source>
+                <target>Кэш обнулён</target>
+            </trans-unit>
+            <trans-unit id="90">
+                <source>Register</source>
+                <target>Зарегистрироваться</target>
+            </trans-unit>
+            <trans-unit id="91">
+                <source>Create New Account</source>
+                <target>Создать аккаунт</target>
+            </trans-unit>
+            <trans-unit id="92">
+                <source>Clear Cache</source>
+                <target>Обнулить кэш</target>
             </trans-unit>
         </body>
     </file>
