--- a/config/translations/messages.en.xlf
+++ b/config/translations/messages.en.xlf
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-<file source-language="en" datatype="plaintext" original="file.ext">
-<body>
-<trans-unit id="1">
-    <source>time_zones</source>
-    <target><![CDATA[
+    <file source-language="en" datatype="plaintext" original="file.ext">
+        <body>
+        <trans-unit id="1">
+            <source>time_zones</source>
+            <target><![CDATA[
 <option value="UTC">(GMT-12:00) International Date Line West</option>
 <option value="Pacific/Pago_Pago">(GMT-11:00) Midway Island, Samoa</option>
 <option value="Pacific/Honolulu">(GMT-10:00) Hawaii</option>
@@ -89,8 +89,94 @@
 <option value="Pacific/Fiji">(GMT+12:00) Fiji, Kamchatka, Marshall Is.</option>
 <option value="Pacific/Tongatapu">(GMT+13:00) Nuku&#39;alofa</option></select>
 ]]></target>
-</trans-unit>
+        </trans-unit>
+        <trans-unit id="2">
+            <source>email.subject.new_post_by</source>
+            <target>New {item} by {username}</target>
+        </trans-unit>
+        <trans-unit id="3">
+            <source>email.subject.new_question_tagged</source>
+            <target>New question tagged: [{tags}]</target>
+        </trans-unit>
+        <trans-unit id="4">
+            <source>email.subject.comment_to_your_answer</source>
+            <target>{username} commented on your answer</target>
+        </trans-unit>
+        <trans-unit id="5">
+            <source>email.subject.reply_to_followed_question</source>
+            <target>New {reply} to a question you following</target>
+        </trans-unit>
+        <trans-unit id="6">
+            <source>email.subject.reply_to_your_comment</source>
+            <target>{username} replied to your comment</target>
+        </trans-unit>
+        <trans-unit id="7">
+            <source>email.body.question_by_user</source>
+            <target><![CDATA[
+            {username} has asked a question:
+                {title}
 
-</body>
-</file>
+                -------------
+                {body}
+
+
+                Visit this url {link}
+                to read the entire question
+                and try to answer it if you can.
+
+                ----
+                You receive this message because you are following
+                the user {username}
+
+                You can change your email preferences by signing in to
+                site {home} and navigating to Settings > Email Preferences
+            ]]>
+            </target>
+        </trans-unit>
+        <trans-unit id="8">
+            <source>email.body.answer_by_user</source>
+            <target><![CDATA[
+                {username} has answered a question:
+                {title}
+
+
+                Visit this url {link}
+                to read the entire question and the answer
+
+                ----
+                You receive this message because you are following
+                the user {username}.
+
+                You can change your email preferences by signing in to
+                site {home} and navigating to Settings > Email Preferences
+            ]]>
+            </target>
+        </trans-unit>
+        <trans-unit id="9">
+            <source>email.body.question_by_tag</source>
+            <target><![CDATA[
+                 {username} has asked a question:
+                 {title}
+
+                 -------------
+                 {body}
+
+
+                 Visit this url {link}
+                 to read the entire question
+                 and try to answer it if you can.
+
+
+                 ----
+                 You receive this message because question contains one
+                 of the tags you follow
+
+                 You can change your email preferences by signing in to
+                 site {home} and navigating to Settings > Email Preferences
+
+                 ]]>
+            </target>
+        </trans-unit>
+        </body>
+    </file>
 </xliff>
