Fixed path to captcha image on quick registration form. Improved handling non-existent controller - now results in 404. Fixes qa.js getMeta() function.

--- a/config/translations/messages.en.xlf
+++ b/config/translations/messages.en.xlf
@@ -91,8 +91,8 @@
 ]]></target>
 </trans-unit>
 <trans-unit id="2">
-    <source>email.subject.new_post_by</source>
-    <target>New {item} by {username}</target>
+    <source>email.subject.new_question_by</source>
+    <target>New question by {username}</target>
 </trans-unit>
 <trans-unit id="3">
     <source>email.subject.new_question_tagged</source>
@@ -243,6 +243,10 @@
 
                  ]]>
     </target>
+</trans-unit>
+<trans-unit id="13">
+    <source>email.subject.new_answer_by</source>
+    <target>New answer by {username}</target>
 </trans-unit>
 </body>
 </file>
