--- a/config/translations/messages.en_US.xlf
+++ b/config/translations/messages.en_US.xlf
@@ -253,6 +253,112 @@
     <source>email.subject.new_answer_by</source>
     <target>New answer by {username}</target>
 </trans-unit>
+<trans-unit id="14">
+    <source>email.subject.registration</source>
+    <target>Your {site_title} login information</target>
+</trans-unit>
+<trans-unit id="15">
+    <source>email.body.registration</source>
+    <target>Welcome to {site_title}!
+
+        IMPORTANT: You Must use the link below to activate your account
+        ----
+        {link}
+
+        ----
+        This email contains your login information for {site_title}
+
+        Your login information is as follows:
+        ----
+        Username: {username}
+        Password: {password}
+        ----
+
+        You are advised to store the above information in a safe place so that you
+        do not face any inconvenience in future.
+
+        You can change your password after you log in.
+
+    </target>
+</trans-unit>
+<trans-unit id="16">
+    <source>Welcome to out site. We have just emailed your your account activation link</source>
+    <target><![CDATA[Welcome to our club.<br>Please check your email and activate your account A.S.A.P.<br>(details are in the email)]]></target>
+</trans-unit>
+<trans-unit id="17">
+    <source>email.subject.password_request</source>
+    <target>Your password request at {site_title}</target>
+</trans-unit>
+<trans-unit id="18">
+    <source>email.body.password_request</source>
+    <target>Hi there, {username}!
+
+        --
+        You have requested to reset your password on {site_title}
+        If you did not request this, please ignore it.
+        ----
+        This link expire and become useless in 24 hours time.
+
+        To reset your password, please visit the following page:
+        ----
+        {link}
+
+        When you visit that page, your password will be reset, and the new password will be emailed to you.
+
+        Your username is: {username}
+
+        ----
+        All the best,
+       {site_title}
+
+    </target>
+</trans-unit>
+<trans-unit id="19">
+    <source>password_request.success</source>
+    <target><![CDATA[
+            Your username is <strong>{username}</strong>
+            Please write it down now!
+            <br><br>
+            Your password reset instructions have been emailed<br>
+            to the address associated with your account<br>
+            ]]></target>
+</trans-unit>
+<trans-unit id="20">
+    <source>email.subject.new_password</source>
+    <target>Your {site_title} login information</target>
+</trans-unit>
+<trans-unit id="21">
+    <source>email.body.new_password</source>
+    <target>
+        This email contains your login information for {site_title}
+        ----
+        Your login: {username}
+        Your password is: {password}
+        ----
+
+        You are advised to store the above information in a safe place so that you
+        do not face any inconvenience in future.
+
+        ----
+        You can also change your password after you log in.
+
+    </target>
+</trans-unit>
+<trans-unit id="22">
+    <source>email.subject.request_activation</source>
+    <target>{site_title} account activation</target>
+</trans-unit>
+<trans-unit id="23">
+    <source>email.body.request_activation</source>
+    <target>
+        Welcome to {site_title}!
+
+        IMPORTANT: You Must use the link below to activate your account
+        ----
+        {link}
+
+    </target>
+</trans-unit>
 </body>
 </file>
 </xliff>
