--- a/config/translations/messages.ru.xlf
+++ b/config/translations/messages.ru.xlf
@@ -911,7 +911,7 @@
 </trans-unit>
 <trans-unit id="175">
     <source>Flag this answer as inappropriate</source>
-    <target>Пожаловаться администратору</target>
+    <target>Сообщить о нарушении</target>
 </trans-unit>
 </body>
 </file>
